--- a/index.html
+++ b/index.html
@@ -287,13 +287,11 @@
   <!-- Trivia Section -->
   <section id="trivia" class="section">
     <h2>Trivia</h2>
-    <p>Did you know? Our campsite has been around for over 50 years, hosting thousands of campers from around the world. Fun fact: The oldest tree here is more than 300 years old, offering a serene and timeless presence to our camping grounds!</p>
+  <p> Japan has a "Crying Sumo" contest!
+Every year, a unique event takes place in Japan called the "Crying Sumo" contest. The goal is for sumo wrestlers to make babies cry. The tradition is believed to bring good health and good fortune to the babies. 🍼💪</p>
   </section>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <p>&copy; 2024 Camp. All Rights Reserved.</p>
-  </footer>
+  
 
   <script src="https://unpkg.com/scrollreveal"></script>
   <script src="main.js"></script>
