--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
 
     <!-- Lightbox Fullscreen Image -->
     <div id="lightbox" class="lightbox" onclick="closeLightbox()">
-        <span class="close-btn">X</span>
-        <img id="lightbox-img" src="" alt="Full-screen image" class="lightbox-img">
-    </div>
+    <img id="lightbox-img" class="lightbox-img" src="" alt="Full Image" />
+    <span class="close-btn" onclick="closeLightbox()">×</span>
+  </div>
 </section>
 
   <!-- Trivia Section -->
